--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "daemonize2": "~0.4.2",
     "fs-finder": "~1.8.1",
-    "ip": "~1.1.4"
+    "ip": "~1.1.4",
+    "array-find": "~1.0.0",
+    "unordered-array-remove": "1.0.2"
   },
   "engines": {
     "node": ">=0.10"
