--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fs-finder": "~1.8.1",
     "ip": "~1.1.4",
     "array-find": "~1.0.0",
-    "unordered-array-remove": "1.0.2"
+    "unordered-array-remove": "1.0.2",
+    "geoip-lite": "1.1.9"
   },
   "engines": {
     "node": ">=0.10"
