--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "array-find": "~1.0.0",
     "unordered-array-remove": "1.0.2",
     "geoip-lite": "1.1.9",
-    "fips": "0.1.2"
+    "fips": "0.1.2",
+    "i18n-iso-countries": "1.10.0",
+    "diacritics": "1.3.0"
   },
   "engines": {
     "node": ">=0.10"
