--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "geoip-lite": "1.1.9",
     "fips": "0.1.2",
     "i18n-iso-countries": "1.10.0",
-    "diacritics": "1.3.0"
+    "diacritics": "1.3.0",
+    "get-youtube-id": "1.0.0"
   },
   "engines": {
     "node": ">=0.10"
