--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "fips": "0.1.2",
     "i18n-iso-countries": "1.10.0",
     "diacritics": "1.3.0",
-    "get-youtube-id": "1.0.0"
+    "get-youtube-id": "1.0.0",
+    "mysql2" :"1.1.2"
   },
   "engines": {
     "node": ">=0.10"
