--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "i18n-iso-countries": "1.10.0",
     "diacritics": "1.3.0",
     "get-youtube-id": "1.0.0",
-    "mysql2" :"1.1.2"
+    "mysql2" :"1.1.2",
+    "libnmap": "0.3.9"
   },
   "engines": {
     "node": ">=0.10"
