--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "diacritics": "1.3.0",
     "get-youtube-id": "1.0.0",
     "mysql2" :"1.1.2",
-    "libnmap": "0.3.9"
+    "libnmap": "0.3.9",
+    "ua-parser-js": "0.7.12"
   },
   "engines": {
     "node": ">=0.10"
