--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   }],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Discutea/NodeIrcBot.git"
+    "url": "https://github.com/Discutea/DiscuteaServices.git"
   },
   "dependencies": {
     "daemonize2": "~0.4.2",
