--- a/package.json
+++ b/package.json
@@ -6,28 +6,31 @@
   "author": "David Verdier",
   "license": "Apache-2.0",
   "preferGlobal": "true",
-  "contributors ": [{
-    "name": "David Verdier",
-    "web": "https://discutea.com"
-  }],
+  "contributors ": [
+    {
+      "name": "David Verdier",
+      "web": "https://discutea.com"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Discutea/DiscuteaServices.git"
   },
   "dependencies": {
-    "daemonize2": "~0.4.2",
-    "fs-finder": "~1.8.1",
-    "ip": "~1.1.4",
     "array-find": "~1.0.0",
-    "unordered-array-remove": "1.0.2",
-    "geoip-lite": "1.1.9",
-    "fips": "0.1.2",
-    "i18n-iso-countries": "1.10.0",
+    "daemonize2": "~0.4.2",
     "diacritics": "1.3.0",
+    "fips": "0.1.2",
+    "fs-finder": "~1.8.1",
+    "geoip-lite": "^1.4.1",
     "get-youtube-id": "1.0.0",
-    "mysql2" :"1.1.2",
-    "libnmap": "0.3.9",
-    "ua-parser-js": "0.7.12"
+    "i18n-iso-countries": "1.10.0",
+    "ip": "~1.1.4",
+    "libnmap": "^0.4.19",
+    "mysql2": "1.1.2",
+    "request": "^2.88.2",
+    "ua-parser-js": "0.7.12",
+    "unordered-array-remove": "1.0.2"
   },
   "engines": {
     "node": ">=0.10"
